--- a/PilotCenterSetup/Product.wxs
+++ b/PilotCenterSetup/Product.wxs
@@ -20,7 +20,9 @@
 			<ComponentGroupRef Id="ProductComponents" />
 			<ComponentRef Id="ApplicationShortcutDesktop" />
 		</Feature>
-
+		<Feature Id="BRIEFINGS" Title="testfolder" Level="1">
+			<ComponentRef Id="BRIEFINGS"/>
+		</Feature>
 		<InstallExecuteSequence>
 			<Custom Action='LaunchInstalledExe' After='InstallFinalize'/>
 		</InstallExecuteSequence>
@@ -50,15 +52,24 @@
 						Value="1"
 						KeyPath="yes"/>
 				</Component>
-			</Directory>
+			</Directory>			
 			<Directory Id="ProgramFilesFolder">
-				<Directory Id="INSTALLFOLDER" Name="FlyAtlantic PilotCenter" />
+				<Directory Id="MAINFOLDER" Name="FlyAtlantic PilotCenter">
+					<Directory Id="INSTALLFOLDER" Name="PilotCenter" />
+					<Directory Id="BRIEFINGS" Name="PilotCenter Briefings">
+						<Component Id="BRIEFINGS" Guid="10437cec-f349-4b2f-8a82-f12b78a9580f"
+						  SharedDllRefCount="no" KeyPath="no" NeverOverwrite="no" Permanent="no" Transitive="no"
+						  Win64="no" Location="either">
+							<CreateFolder/>
+						</Component>					
+					</Directory>
+				</Directory>				
 			</Directory>
 		</Directory>
 	</Fragment>
 
-	<Fragment>
-		<ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
+	<Fragment>		
+		<ComponentGroup Id="ProductComponents" Directory="MAINFOLDER">
 			<Component Id="PilotCenterTSZ">
 				<File Source="$(var.PilotCenterTSZ.TargetPath)" />
 			</Component>
